force-app/main/default/objects/Badge__c/fields/Badge_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Badge_Issue_Date__c</fullName>
    <label>Badge Issue Date</label>
    <type>Date</type>
</CustomField>