force-app/main/default/objects/Badge__c/fields/Badge_Number__c.field-meta.xml
<CustomField>
    <fullName>Badge_Number__c</fullName>
    <displayFormat>Badge-{000000}</displayFormat>
    <label>Badge Number</label>
    <type>AutoNumber</type>
</CustomField>