force-app/main/default/objects/Badge__c/fields/Badge_Status__c.field-meta.xml
<CustomField>
    <fullName>Badge_Status__c</fullName>
    <label>Badge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
            <value>
                <fullName>Judge Assigned</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>