force-app/main/default/objects/Badge__c/fields/Congratulations_Message__c.field-meta.xml
<CustomField>
    <fullName>Congratulations_Message__c</fullName>
    <label>Congratulations Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>