force-app/main/default/objects/Badge__c/validationRules/Badge_Issue_date_can_not_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Badge_Issue_date_can_not_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Badge_Issue_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Badge_Issue_Date__c</errorDisplayField>
    <errorMessage>Badge Issue date can not be a future date</errorMessage>
</ValidationRule>